# Hackathon_Meta_AI_anshraut-sql-env

./: Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
