[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anshraut-sql-env"
version = "0.1.0"
description = "A real-world SQL optimization environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "sqlalchemy",
    "openai"
]

[tool.setuptools]
py-modules = ["app", "environment", "models"]