[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anshraut-sql-env"
version = "0.1.0"
description = "A real-world SQL optimization environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "sqlalchemy",
    "openai"
]

# CRITICAL: Changed from server.app:app to server.app:main
[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = ["models"]
